# bc_translation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: batch_processing.py  config.py  evals.py  evaluations.md  langchain_integrations.py  main.py  placeholder_parsing.py  ui_components.py
app/prompts/: correction_prompt.md  translation_prompt.md  translation_prompt_v1.md
notebooks/: experimentations.ipynb  google_translation.csv  translated.csv
tests/: conftest.py  test_evals.py  test_langchain_integrations.py  test_placeholder_parsing.py
