[tool.poetry]
name = "bc-translation"
version = "0.1.0"
description = "Translation Utility"
authors = ["Kristof Tabori"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.14"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest]
pythonpath = "."

[tool.mypy]
ignore_missing_imports = true